# worldcup-porra

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  orchestrator.md  pyproject.toml  render.yaml  requirements.txt
.agents/: architect.md  backend.md  devops.md  frontend.md  product-designer.md  reviewer.md
.github/workflows/: ci.yml
New Frontend Samples/: README.md  index.html
app/: __init__.py
app/api/: dependencies.py  errors.py  main.py
app/config/: settings.py
app/db/: session.py
app/domain/: enums.py  errors.py
app/models/: __init__.py  auth.py  base.py  match.py  pool.py  prediction.py  team.py  tournament.py  user.py
app/providers/: __init__.py  base.py  worldcup2026.py
app/repositories/: auth.py  pools.py  predictions.py  tournaments.py  users.py
app/services/: admin_service.py  auth_service.py  errors.py  fixture_sync_service.py  pool_service.py  prediction_service.py  security.py  tournament_service.py
docs/: api.md  architecture.md  backlog.md  backlog_hist.md  database.md  deployment.md  environment.md  frontend.md  infrastructure.md  project-status.md  roadmap.md
docs/decisions/: arch-003-knockout-data-source-and-result-contract.md  arch-004-knockout-operations-remediation-contract.md
frontend/: .next-dev.err  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: actions.test.ts  actions.ts  error.tsx  layout.tsx  (+2 more)
scripts/: __init__.py  seed_dev_data.py  sync_knockout_fixtures.py
tests/: conftest.py
(+116 files in other folders)
