[project]
name = "worldcup-pool-app"
version = "0.1.0"
description = "Private FIFA World Cup 2026 knockout prediction pool backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "PyJWT>=2.8.0",
    "psycopg[binary]>=3.2.0",
    "SQLAlchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

